# meshpack

./: .env.example  .gitignore  HANDOFF.md  index.html  package-lock.json  package.json  tailwind.config.js  todo.md  vite.config.js
apps/mobile/: .gitignore  README.md  pubspec.yaml
docs/: ARCHITECTURE.md  BACKEND.md  CASE_PACKAGE.md  E2EE_PROTOCOL.md  LAB_MOBILE.md  MONOREPO.md  SCAN_ADAPTERS.md  UI_REDESIGN.md
meshpack-lab/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
meshpack-lab/src/: main.js  (+2 more)
meshpack-lab/src-tauri/: Cargo.toml  tauri.conf.json
meshpack-lab/src-tauri/capabilities/: default.json
meshpack-lab/src-tauri/permissions/: allow-write-file-bytes.toml
meshpack-lab/src-tauri/src/: lib.rs  main.rs
scripts/: test-scan-adapters.mjs
src/: activityLog.js  alignment.js  annotationLayer.js  annotations.js  appLock.js  appNavigation.js  appTips.js  appTipsUI.js  auditLog.js  auditLogUI.js  caseModals.js  casePackage.js  casePlanning.js  caseReadiness.js  caseStatusSteps.js  caseSummary.js  cases.js  dbBackup.js  dentalChart.js  dismissedScanGroups.js  fileBrowser.js  i18n.js  icons.js  localUserRoles.js  localUsersUI.js  main.js  messagesHubUI.js  navChrome.js  patientEditModal.js  patientListSummary.js  patientStemAliases.js  patientStemRejections.js  patientSuggestion.js  patients.js  planningCaseMessages.js  planningPage.js  scanFilename.js  scanGroupQuality.js  scanImportWizard.js  scanSession.js  (+11 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity_log.rs  compression.rs  config.rs  db.rs  drive.rs  files.rs  lib.rs  local_users.rs  main.rs  pin_auth.rs  secure_storage.rs  stem.rs  watcher.rs
supabase/: README.md  setup_mpack.sql
(+66 files in other folders)
