[package]
name = "meshpack"
version = "0.1.0"
description = "Diş klinikleri için tarama dosyası yönetim uygulaması"
authors = ["MeshPack"]
edition = "2021"

[lib]
name = "meshpack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
notify-debouncer-mini = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
oauth2 = "4"
url = "2"
dirs = "5"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
open = "5"
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
