[package]
name = "meshpack-lab"
version = "0.1.0"
description = "MeshPack Lab — laboratuvar vaka kuyruğu"
authors = ["MeshPack"]
edition = "2021"

[lib]
name = "meshpack_lab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
